
FIND_PACKAGE(SlicerExecutionModel REQUIRED)
include(${SlicerExecutionModel_USE_FILE})
include(${GenerateCLP_USE_FILE})

FIND_PACKAGE(ITK REQUIRED)
IF(${ITK_FOUND})
	include(${ITK_USE_FILE})
ENDIF(${ITK_FOUND})

FIND_PACKAGE(VTK)
IF(${VTK_FOUND})
	include(${VTK_USE_FILE})
ENDIF(${VTK_FOUND})


SET(USER_CMAKE_MACROS ${PROJECT_SOURCE_DIR}/src/cmake)
INCLUDE(${USER_CMAKE_MACROS}/UserMacros.cmake)

COPYDIR(${CMAKE_CURRENT_SOURCE_DIR}/data ${PROJECT_BINARY_DIR}/data)
SUBDIRLIST(PROJECT_LIBRARIES ${CMAKE_CURRENT_SOURCE_DIR}/lib)

FOREACH(PROJECT_LIB ${PROJECT_LIBRARIES})
    INCLUDE_DIRECTORIES(
	    ${CMAKE_CURRENT_SOURCE_DIR}/lib/${PROJECT_LIB}
	)
ENDFOREACH()

LINK_DIRECTORIES(
    ${PROJECT_BINARY_DIR}/lib/
)

add_subdirectory(lib)
add_subdirectory(appli)
add_subdirectory(install)