
FILE(GLOB_RECURSE NAMES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*.sh)
FOREACH( NAME  ${NAMES})
  CONFIGURE_FILE(
      ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}
      ${PROJECT_BINARY_DIR}/appli/${NAME}
      COPYONLY )
ENDFOREACH(NAME)

OPTION(TEXTURE_BIOMARKER_TOOL OFF)

IF(TEXTURE_BIOMARKER_TOOL)

  SET(EXE_NAME ComputeTexture)
  SET(${EXE_NAME}_LIBRARIES  ${ITK_LIBRARIES})
  add_executable(${EXE_NAME}   ${EXE_NAME}.cxx)
  target_link_libraries(${EXE_NAME} ${${EXE_NAME}_LIBRARIES})
  install(TARGETS ${EXE_NAME}
          RUNTIME
          DESTINATION bin)


  SET(EXE_NAME TextureBioMarkerTool)
  SET(${EXE_NAME}_LIBRARIES DMD)

  add_executable(${EXE_NAME}   ${EXE_NAME}.cxx)
  target_link_libraries(${EXE_NAME} ${${EXE_NAME}_LIBRARIES})
  install(TARGETS ${EXE_NAME}
          RUNTIME
          DESTINATION bin)


  SET(EXE_NAME polyfit)
  SET(${EXE_NAME}_LIBRARIES  ${ITK_LIBRARIES})

  add_executable(${EXE_NAME}   ${EXE_NAME}.c)
  set_target_properties(${EXE_NAME} PROPERTIES LINKER_LANGUAGE C)
  target_link_libraries(${EXE_NAME} ${${EXE_NAME}_LIBRARIES})
  install(TARGETS ${EXE_NAME}
          RUNTIME
          DESTINATION bin)
ENDIF(TEXTURE_BIOMARKER_TOOL)

set(INSTALL_RUNTIME_DESTINATION bin)
set(INSTALL_LIBRARY_DESTINATION lib)
set(INSTALL_ARCHIVE_DESTINATION lib)

SET(EXE_NAME ComponentSizeRLE)
SET(${EXE_NAME}_LIBRARIES  ${ITK_LIBRARIES})
SET(${EXE_NAME}_ADDITIONAL_SRCS "")

SEMMacroBuildCLI(
NAME ${EXE_NAME}
EXECUTABLE_ONLY
ADDITIONAL_SRCS ${${EXE_NAME}_ADDITIONAL_SRCS}
TARGET_LIBRARIES ${${EXE_NAME}_LIBRARIES}
RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
)

SET(EXE_NAME RLE)
SET(${EXE_NAME}_LIBRARIES  ${ITK_LIBRARIES})
SET(${EXE_NAME}_ADDITIONAL_SRCS "")

SEMMacroBuildCLI(
NAME ${EXE_NAME}
EXECUTABLE_ONLY
ADDITIONAL_SRCS ${${EXE_NAME}_ADDITIONAL_SRCS}
TARGET_LIBRARIES ${ITK_LIBRARIES}
RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
)


# SET(EXE_NAME DMDBioMarkerTool)
# SET(${EXE_NAME}_LIBRARIES  ${ITK_LIBRARIES} DMD)
# SET(${EXE_NAME}_SOURCE ${EXE_NAME}.cxx)
# add_executable(${EXE_NAME}   ${${EXE_NAME}_SOURCE})
# target_link_libraries(${EXE_NAME} ${${EXE_NAME}_LIBRARIES})
# install(TARGETS ${${EXE_NAME}}
#         RUNTIME
#         DESTINATION bin)

# set_target_properties( DMDBioMarkerTool
#     PROPERTIES    
#     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
# )


SET(EXE_NAME t2Relaxation)
SET(${EXE_NAME}_LIBRARIES  ${ITK_LIBRARIES})
SET(${EXE_NAME}_ADDITIONAL_SRCS "")

SEMMacroBuildCLI(
NAME ${EXE_NAME}
EXECUTABLE_ONLY
ADDITIONAL_SRCS ${${EXE_NAME}_ADDITIONAL_SRCS}
TARGET_LIBRARIES ${ITK_LIBRARIES} itkT2RelaxationMap
RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
)